--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Mark Sabino
-email: marksabino@marksabino.com
+title: Chuck Rock
+email: chuck@rock.io
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to my website.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: SayBeano
-github_username:  SayBeano
+twitter_username: chuck-rock
+github_username:  chuck-rock
 
 # Build settings
 markdown: kramdown
